--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ additional_links:
   url: https://scholar.google.com/citations?user=Dad3F3AAAAAJ&hl=en
 - title: Download Resume
   icon: fas fa-download
-  url: pdf/Resume.pdf
+  url: tanhao1998.github.io/pdf/Resume.pdf
 
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
