--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,14 @@ content:
   - title: Education
     layout: list
     content:
-      - layout: left
+      - layout: top
         title: University of Leeds
         sub_title: Doctor of Philosophy
         caption: October 2021 - present
         quote: >
         description: | # this will include new lines to allow paragraphs
           Description of qualification
+          I have been using this project as a way to increase many of my skills and also learn new things. I have particually enjoyed managing my own project and designing my own architecture and implementing this to a high standard.
       - layout: left
         title: Southern University of Science and Technology
         sub_title: B.Eng. in Computer Science and Technology
