--- a/_config.yml
+++ b/_config.yml
@@ -100,12 +100,11 @@ content:
         title: University of Leeds
         sub_title: Doctor of Philosophy
         caption: October 2021 - present
-        quote: >
         description: | # this will include new lines to allow paragraphs
           Description of qualification
           I have been using this project as a way to increase many of my skills and also learn new things. I have particually enjoyed managing my own project and designing my own architecture and implementing this to a high standard.
-      - layout: top
-        title: Southern University of Science and Technology
+      - layout: left
+        title: SUSTech
         sub_title: B.Eng. in Computer Science and Technology
         caption: September 2016 - July 2020
         quote: >
