--- a/_config.yml
+++ b/_config.yml
@@ -94,13 +94,12 @@ content:
   - title: Experience
     layout: list
     content:
-      - layout: right
-        title: Company name
-        sub_title: Job title
-        caption: Date Range (eg. November 2016 - present)
-        link: Link to company (optional)
-        quote: >
-          Short description of the company (optional)
+      - layout: left
+        title: SUSTech
+        sub_title: Research Assistant
+        caption: July 2020 - August 2021
+        link: http://emi.sustech.edu.cn
+        link_text: EMI Group
         description: | # this will include new lines to allow paragraphs
           Description of role
   - title: Publications
