--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hao Tan is currently a PhD student with the School of Computing at the Univeristy of Leeds, UK. 
   He received the B.Eng. degree in Computer Science and Engineering from Southern Univeristy of Science and Technology (SUSTech), China in 2020. 
-  His research interests are in the field of <mark> computer vision </mark> <mark> automated machine learning</mark> and in particular <mark> evolutionary neural architecture search</mark>
+  His research interests are in the field of <mark> computer vision </mark>  <mark> automated machine learning</mark> and in particular <mark> evolutionary neural architecture search</mark>
   
 content:
   - title: Recent News
@@ -86,8 +86,9 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       # Journals:
-      
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
+      - **Hao Tan**, Ran Cheng, Shihua Huang, Cheng He, Changxiao Qiu, Fan Yang, Ping Luo. 
+      RelativeNAS: Relative Neural Architecture Search via Slow-Fast Learning. 
+      IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2021.
 
       Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
       
