--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ content:
       Efficient Evolutionary Neural Architecture Search by Modular Inheritable Crossover. S
       warm and Evolutionary Computation (SWEVO), 2021.
       
-      # Conferences:
+      ## Conferences:
       - **Tao Tan**, Cheng He, Dexuan Tang, Ran Cheng. 
       Efficient Evolutionary Neural Architecture Search by Modular Inheritable Crossover. 
       International Conference on Bio-inspired Computing: Theories and Applications (BIC-TA), 2019.
