--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,10 @@ additional_links:
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I am currently a first-year Ph.D. student with the School of Computing at the Univeristy of Leeds, UK. 
-  It is also a joint Ph.D. program with the Dept. of Computer Science and Engineering at the Southern University of Science and Technology (SUSTech), China.
+  I am currently a first-year Ph.D. student with the School of Computing at Univeristy of Leeds, UK. 
+  It is also a joint Ph.D. program with the Dept. of Computer Science and Engineering at Southern University of Science and Technology (SUSTech), China.
   Before my Ph.D. journey, I received the B.Eng. degree in Computer Science and Engineering from SUSTech in 2020. 
+  
   My research interests are in the field of <mark> computer vision </mark>, <mark> automated machine learning</mark>, and in particular <mark> evolutionary neural architecture search</mark>.
   
 content:
@@ -64,13 +65,16 @@ content:
         caption: October 2021 - present
         description: | # this will include new lines to allow paragraphs
           I am currently a Ph.D. student at Univeristy of Leeds, under the supervision of [Dr. Nabi Omidvar](https://www.nomidvar.com) and co-supervision of [Prof. Ran Cheng](http://emi.sustech.edu.cn/?p=4665) at SUSTech. 
-          
+          Faced by the most advanced networks won by quatity and scale, I try to find the inhert information hided under the network to save the engery.
+          In general, I want to use information theory and feature visualization to illustrate the characteristic of neural networks.
+          What is more, my goal is to desgin a general nerual network which can process multi-modal information, such as texts and images, at the same time.
       - layout: right
         title: SUSTech
         sub_title: B.Eng. in Computer Science and Technology
         caption: September 2016 - July 2020
         description: | # this will include new lines to allow paragraphs
-          Description of qualification
+          During my degree at SUSTech I learnt lots of key skills such as team work and project management. 
+          Although we mainly focused on software development and the principles of programming I use a lot of these skills to my advantage in my day to day work.
   - title: Experience
     layout: list
     content:
