--- a/_config.yml
+++ b/_config.yml
@@ -65,16 +65,17 @@ content:
         caption: October 2021 - present
         description: | # this will include new lines to allow paragraphs
           I am currently a Ph.D. student at Univeristy of Leeds, under the supervision of [Dr. Nabi Omidvar](https://www.nomidvar.com) and co-supervision of [Prof. Ran Cheng](http://emi.sustech.edu.cn/?p=4665) at SUSTech. 
-          Faced by the most advanced networks won by quatity and scale, I try to find the inhert information hided under the network to save the engery.
-          In general, I want to use information theory and feature visualization to illustrate the characteristic of neural networks.
+          Faced by the most advanced networks won by quatity and scale, I try to find the inherit information under the network to save the energy.
+          In general, I want to use information theory and feature visualization technology to illustrate the characteristic of neural networks.
           What is more, my goal is to desgin a general nerual network which can process multi-modal information, such as texts and images, at the same time.
       - layout: right
         title: SUSTech
         sub_title: B.Eng. in Computer Science and Technology
         caption: September 2016 - July 2020
         description: | # this will include new lines to allow paragraphs
-          During my degree at SUSTech I learnt lots of key skills such as team work and project management. 
-          Although we mainly focused on software development and the principles of programming I use a lot of these skills to my advantage in my day to day work.
+          During my degree at SUSTech I learnt lots of baisc skills for research.
+          For example, collecting and tracing papers are very important to dive into specifical research areas.
+          I also learnt how to use Numpy and PyTorch to start my project and realised my idea.
   - title: Experience
     layout: list
     content:
@@ -85,7 +86,8 @@ content:
         link: http://emi.sustech.edu.cn
         link_text: EMI Group
         description: | # this will include new lines to allow paragraphs
-          I did the academic research for neural architecture search.
+          After my graduation, I continued to do the academic research for neural architecture search as a Research Assitant at SUSTech.
+          During this one year, I submitted my papers into journals and handled the responses.
           At the same time, I was the **key member** and responsible for developing neural architecture search algorithms under two research giants.
   - title: Publications
     layout: text
