--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ additional_links:
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
 # gtm: "GTM-0000000"
-# gtag: "UA-00000000-0"
-google_analytics: "G-VSKWWKRQT4"
+gtag: "G-VSKWWKRQT4"
+# google_analytics: "G-VSKWWKRQT4"
 
 # About Section
 # about_title: About Me (Use this to override about section title)
