--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ content:
       ## Conferences
       - **Tao Tan**, Cheng He, Dexuan Tang, Ran Cheng. 
       Efficient Evolutionary Neural Architecture Search by Modular Inheritable Crossover. 
-      International Conference on Bio-inspired Computing: Theories and Applications (BIC-TA), 2019.
+      International Conference on Bio-inspired Computing: Theories and Applications (BIC-TA), 2019. (<font color="red"> Best Paper Award </font>)
 # Footer
 footer_show_references: false
 # references_title: References on request (Override references text)
