--- a/_config.yml
+++ b/_config.yml
@@ -95,15 +95,15 @@ content:
       ## Journals
       - **Hao Tan**, Ran Cheng, Shihua Huang, Cheng He, Changxiao Qiu, Fan Yang, Ping Luo. 
       RelativeNAS: Relative Neural Architecture Search via Slow-Fast Learning. 
-      IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2021. [ [paper](https://arxiv.org/abs/2009.06193) / [code](https://github.com/EMI-Group/RelativeNAS) ]
+      *IEEE Transactions on Neural Networks and Learning Systems (TNNLS)*, 2021. [ [paper](https://arxiv.org/abs/2009.06193) / [code](https://github.com/EMI-Group/RelativeNAS) ]
       - Cheng He, **Hao Tan**, Shihua Huang, Ran Cheng. 
       Efficient Evolutionary Neural Architecture Search by Modular Inheritable Crossover. 
-      Swarm and Evolutionary Computation (SWEVO), 2021. [ [paper](https://www.sciencedirect.com/science/article/pii/S2210650221000559) ]
+      *Swarm and Evolutionary Computation (SWEVO)*, 2021. [ [paper](https://www.sciencedirect.com/science/article/pii/S2210650221000559) ]
       
       ## Conferences
       - **Tao Tan**, Cheng He, Dexuan Tang, Ran Cheng. 
       Efficient Evolutionary Neural Architecture Search by Modular Inheritable Crossover. 
-      International Conference on Bio-inspired Computing: Theories and Applications (BIC-TA), 2019. (<font color="red"> Best Paper Award </font>)
+      *International Conference on Bio-inspired Computing: Theories and Applications (BIC-TA)*, 2019. (<font color="red"> Best Paper Award </font>)
 # Footer
 footer_show_references: false
 # references_title: References on request (Override references text)
