--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ gtag: "G-VSKWWKRQT4"
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I am currently a first-year Ph.D. student with the School of Computing at Univeristy of Leeds, UK. 
+  I will be a first-year Ph.D. student with the School of Computing at the University of Leeds, UK, in 2021. 
   It is also a joint Ph.D. program with the Dept. of Computer Science and Engineering at Southern University of Science and Technology (SUSTech), China.
-  Before my Ph.D. journey, I received the B.Eng. degree in Computer Science and Engineering from SUSTech in 2020. 
+  I received the B.Eng. degree in Computer Science and Engineering from SUSTech in 2020. 
   
   My research interests are in the field of <mark>computer vision</mark>, <mark>automated machine learning</mark>, and in particular <mark>evolutionary neural architecture search</mark>.
   
@@ -62,19 +62,21 @@ content:
       - layout: left
         title: University of Leeds
         sub_title: Doctor of Philosophy
-        caption: October 2021 - present
+        caption: October 2021 - future
         description: | # this will include new lines to allow paragraphs
-          I am currently a Ph.D. student at Univeristy of Leeds, under the supervision of [Dr. Nabi Omidvar](https://www.nomidvar.com) and co-supervision at SUSTech.
-          Faced by the most advanced networks won by quatity and scale, I try to find the inherit information under the network to save the energy.
-          In general, I want to use information theory and feature visualization technology to illustrate the characteristic of neural networks.
-          What is more, my goal is to desgin a general nerual network which can process multi-modal information, such as texts and images, at the same time.
+          I will be a Ph.D. student at the University of Leeds, under the supervision of [Dr. Nabi Omidvar](https://www.nomidvar.com) and co-supervision at SUSTech.
+          The vision of my research may contain three parts: how to analyze the network, how to design the network, and how to deploy the network.  
+          Firstly, I will use Information Theory and Feature Visualization to interpret the behaviour of the network or find the boundary of it. 
+          Secondly, the knowledge we discover can be used as a prior to design the network.
+          Thirdly, we will extend the designed network into a search space and use Neural Architecture Search to further improve its performance, or for deployment purposes when considering multiple objectives.
+          What is more, my long-term goal is to design a general neural network that can process multi-modal information, such as texts and images, at the same time.
       - layout: right
         title: SUSTech
         sub_title: B.Eng. in Computer Science and Technology
         caption: September 2016 - July 2020
         description: | # this will include new lines to allow paragraphs
-          During my degree at SUSTech I learnt lots of baisc skills for research.
-          For example, collecting and tracing papers are very important to dive into specifical research areas.
+          During my degree at SUSTech, I learnt lots of basic skills for research.
+          For example, collecting and tracing papers are very important to dive into specific research areas.
           I also learnt how to use Numpy and PyTorch to start my project and realised my idea.
   - title: Experience
     layout: list
