--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ content:
         description: | # this will include new lines to allow paragraphs
           I will be a Ph.D. student at the University of Leeds, under the supervision of [Dr. Nabi Omidvar](https://www.nomidvar.com) and co-supervision at SUSTech.
           The vision of my research may contain three parts: <mark>how to analyze the neural network</mark>, <mark>how to design the neural network</mark>, and <mark>how to deploy the neural network</mark>.
-          Firstly, I will use <mark>Information Theory</mark> and <mark>Feature Visualization</mark> to interpret the behaviour of the network or find the boundary of it.
-          Secondly, the knowledge we discover can be used as a prior to design the network.
-          Thirdly, we will extend the designed network into a search space and use Neural Architecture Search to further improve its performance, or for deployment purposes when considering multiple objectives.
+          Firstly, I will use <mark>Information Theory</mark> and <mark>Feature Visualization</mark> to interpret the behaviour of the neural network or find the boundary of it.
+          Secondly, the knowledge we discover can be used as a prior to design the neural network.
+          Thirdly, we will extend the designed neural network into a search space and use <mark>Neural Architecture Search</mark> to further improve its performance, or for deployment purposes when considering multiple objectives.
           What is more, my long-term goal is to design a general neural network that can process multi-modal information, such as texts and images, at the same time.
       - layout: right
         title: SUSTech
