--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ gtag: "G-VSKWWKRQT4"
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I will be a first-year Ph.D. student with the School of Computing at the University of Leeds, UK, in 2021. 
+  I am a first-year Ph.D. student with the School of Computing at the University of Leeds, UK, in 2021. 
   It is also a joint Ph.D. program with the Dept. of Computer Science and Engineering at Southern University of Science and Technology (SUSTech), China.
   I received the B.Eng. degree in Computer Science and Engineering from SUSTech in 2020. 
   
@@ -64,7 +64,7 @@ content:
         sub_title: Doctor of Philosophy
         caption: October 2021 - future
         description: | # this will include new lines to allow paragraphs
-          I will be a Ph.D. student at the University of Leeds, under the supervision of [Dr. Nabi Omidvar](https://www.nomidvar.com) and co-supervision at SUSTech.
+          I am a Ph.D. student at the University of Leeds, under the supervision of [Dr. Nabi Omidvar](https://www.nomidvar.com) and co-supervision at SUSTech.
           The vision of my research may contain three parts: **how to analyze the neural network**, **how to design the neural network**, and **how to deploy the neural network**.       
           Firstly, I will use **Information Theory** and **Feature Visualization** to interpret the behaviour of the neural network or find the boundary of it.
           Secondly, the knowledge we discover can be used as a prior to design the neural network.
