--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ content:
       *Swarm and Evolutionary Computation (SWEVO)*, 2021. [ [paper](https://www.sciencedirect.com/science/article/pii/S2210650221000559) ]
       
       ## Conferences
-      - **Tao Tan**, Cheng He, Dexuan Tang, Ran Cheng. 
+      - **Hao Tan**, Cheng He, Dexuan Tang, Ran Cheng. 
       Efficient Evolutionary Neural Architecture Search by Modular Inheritable Crossover. 
       *International Conference on Bio-inspired Computing: Theories and Applications (BIC-TA)*, 2019. (<font color="red"> Best Paper Award </font>)
 # Footer
