--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Hao Tan (谭浩)
-title: PhD Candidate Student
+title: Provisional PhD Candidate
 email: tanbox@live.com
 # email_title: Email (Email title override)
 # phone: Your phone number (optional)
