--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 # Personal info
 name: Hao Tan (谭浩)
 title: PhD Candidate
-email: tanbox@live.com
+email: tanbox_at_live.com
 # email_title: Email (Email title override)
 # phone: Your phone number (optional)
 # phone_title: Phone (Phone title override)
