--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ email: tanbox_at_live.com
 darkmode: false
 
 # Social links
-github_username:  tanhao1998
+github_username:  haotan1998
 linkedin_username: tanhao1998
 orcid_username: 0000-0002-9489-6543
 
