--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ darkmode: false
 
 # Social links
 github_username:  haotan1998
-linkedin_username: tanhao1998
+linkedin_username: haotan1998
 orcid_username: 0000-0002-9489-6543
 
 # Additional icon links
