Update the icon

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ gtag: "G-VSKWWKRQT4"
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Currently, I am a second-year Ph.D. student with the School of Computing at the University of Leeds, UK. 
+  Currently, I am a third-year Ph.D. student with the School of Computing at the University of Leeds, UK.
   It is also a joint Ph.D. program with the Dept. of Computer Science and Engineering at Southern University of Science and Technology (SUSTech), China.
   I received the B.Eng. degree in Computer Science and Engineering from SUSTech in 2020. 
   
